--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+   <p>rogramação</p>
+   <p> Entende-se por nicho ecológico todo conjunto de características e condições que permite a sobrevivência de uma determinada espécie no ambiente. Em outras palavras, representa o “papel ecológico” de um indivíduo no ambiente em que ele se encontra.</p>
+</body>
+</html>
