--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src='main.js'></script>
 </head>
 <body>
-   <p>rogramação</p>
+    <img src="imagem.webp" rel="natureza">
+   <p>programação</p>
    <p> Entende-se por nicho ecológico todo conjunto de características e condições que permite a sobrevivência de uma determinada espécie no ambiente. Em outras palavras, representa o “papel ecológico” de um indivíduo no ambiente em que ele se encontra.</p>
 </body>
 </html>
