--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>hexa</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <img src="imagem.webp" rel="natureza">
-   <p>programação</p>
+    <img id="banner" src="imagem.webp" rel="natureza">
+   <h1>programação</h1>
    <p> Entende-se por nicho ecológico todo conjunto de características e condições que permite a sobrevivência de uma determinada espécie no ambiente. Em outras palavras, representa o “papel ecológico” de um indivíduo no ambiente em que ele se encontra.</p>
+   <img id="banner" src="imagem.webp" rel="natureza">
 </body>
 </html>
